adding main section Relate #3

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+    <section class="main">
+        <div class="background">
+            <h2>Hello, I'm Bakeza<br><span>Software developer</span></h2>
+            <h3>I build Websites and design logos</h3>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/bakeza.diazada" target="_blank"><i
+                            class="fab fa-facebook-square"></i></a>
+                <a href="https://github.com/Bakeza" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a href="https://www.instagram.com/bakeza2002/" target="_blank"><i
+                            class="fab fa-instagram-square"></i></a>
+                <a href="https://discord.com/channels/Bakeza%20Diazada" target="_blank"><i
+                            class="fab fa-discord"></i></a>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
