adding intro section Relate #5

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
             </div>
         </div>
     </section>
+    <section class="cards" id="intro">
+        <h2 class="title">Introduction</h2>
+        <p>My name is Bakeza Diazada I’m 19 years old, I’m Palestinian from Gaza. I’m a software developer at Islamic University. I’ve been a volunteer at Code for Palestine sponsored by Paltel Group Foundation in the summer of 2021.
+        </p>
 
+    </section>
 
 </body>
 
