adding skills section Relate #7

--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
 
     </section>
 
+    <section class="projects" id="skills">
+        <h2 class="title">Skills</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+                <div class="info">
+                    <h3>Programmer</h3>
+                    <p>Programming languages (Python ,Java and Java Script) <br> Web languages (HTML and CSS)</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-pencil-ruler"></i>
+                </div>
+                <div class="info">
+                    <h3>Designer</h3>
+                    <p>Adobe Creative Suite (Photoshop and Illustrator)</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-fist-raised"></i>
+                </div>
+                <div class="info">
+                    <h3>Leadership</h3>
+                    <p>"If your actions inspire others to dream more, learn more, do more and become more, you are a leader."
+                    </p>
+                    <h4>-John Quincy Adams</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
