--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
         </div>
     </section>
 
+    <section class="cards contact" id="contact">
+        <h2 class="title">Contact</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-phone"></i>
+                </div>
+                <div class="info">
+                    <h3>Phone</h3>
+                    <p>+972-592639672</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-envelope"></i>
+                </div>
+                <div class="info">
+                    <h3>Email</h3>
+                    <p>dbakeza2002@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
